--- a/wikl-cloud/wikl-config/src/main/resources/bootstrap.yml
+++ b/wikl-cloud/wikl-config/src/main/resources/bootstrap.yml
@@ -3,3 +3,9 @@ management:
     web:
       exposure:
         include: "*"
+spring:
+  cloud:
+    #Ribbon 负载均衡正在维护，使用 loadBalancer
+    loadbalancer:
+      ribbon:
+        enabled: false
