1. 择é增加验证mongo存储上传构建文件的逻辑

--- a/wikl-component/pom.xml
+++ b/wikl-component/pom.xml
@@ -157,6 +157,12 @@
             <version>7.4.2</version>
         </dependency>
 
+        <!--mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
