1.[wikl-common]å¢修改日期工具类 2.[wikl-java]添加转拼音方法 3.[wikl-orientdb][orientdb-jdbc]增加生成概念图谱字典

--- a/wikl-java/pom.xml
+++ b/wikl-java/pom.xml
@@ -70,6 +70,19 @@
             <artifactId>micrometer-core</artifactId>
             <version>1.1.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>top.wikl</groupId>
+            <artifactId>common-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
