--- a/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
+++ b/wikl-orientdb/orientdb-jdbc/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       max-file-size: 104857600
       max-request-size: 524288000
   datasource:
-    url: jdbc:mysql://10.0.50.150:53306/bmsmartkg?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    url: jdbc:mysql://****/bmsmartkg?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useSSL=false
     username: admin
     password: Bmzt2016_mysql
     driver-class-name: com.mysql.jdbc.Driver
@@ -39,9 +39,9 @@ storage:
   #orientdb setting
   orientdb:
     #    url: remote:10.0.47.59/kngraphIndex;10.0.47.60/kngraphIndex;10.0.47.61/kngraphIndex
-    jdbcurl: remote:10.0.50.150:52424
-    url: remote:10.0.50.150:52424/orientdb_gw_db
-    database: orientdb_gw_db
+    jdbcurl: remote:****:55587
+    url: remote:****:55587/orientdb_cay_db
+    database: orientdb_cay_db
     username: root
     password: Bmzt2016_orientdb
 
