--- a/wikl-common/common-neo4j/neo4j-utils/pom.xml
+++ b/wikl-common/common-neo4j/neo4j-utils/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>neo4j-entity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
