1. 增加[wikl-admin]æ模块 2. [neo4j-jdbc]中增加admin-client依赖

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <module>wikl-elk/wikl-zipkin</module>
         <module>wikl-elk/trace-a</module>
         <module>wikl-elk/trace-b</module>
+        <module>wikl-cloud/wikl-admin</module>
     </modules>
 
     <properties>
