--- a/wikl-neo4j/neo4j-jdbc/pom.xml
+++ b/wikl-neo4j/neo4j-jdbc/pom.xml
@@ -100,6 +100,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
