--- a/wikl-cloud/wikl-admin/pom.xml
+++ b/wikl-cloud/wikl-admin/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
