1. 增加认证授权模块 2. 增加测试方法‘

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>wikl-cloud</module>
         <module>wikl-cloud/wikl-eureka</module>
         <module>wikl-cloud/wikl-config</module>
+        <module>wikl-cloud/wikl-auth</module>
         <module>wikl-common/common-util</module>
         <module>wikl-janusgraph</module>
         <module>wikl-component</module>
