--- a/wikl-common/pom.xml
+++ b/wikl-common/pom.xml
@@ -3,6 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <modules>
+        <module>common-core</module>
+    </modules>
     <parent>
         <groupId>top.wikl</groupId>
         <artifactId>wiklgraph</artifactId>
