--- a/wikl-java/pom.xml
+++ b/wikl-java/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>common-util</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
