--- a/wikl-cloud/wikl-auth/pom.xml
+++ b/wikl-cloud/wikl-auth/pom.xml
@@ -16,10 +16,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
+            <version>2.2.4.RELEASE</version>
         </dependency>
 
 
