1. 增加新内容

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
             <scope>provided</scope>
         </dependency>-->
 
+        <!--Spring Cloud 新版本默认将 Bootstrap 禁用，需要将 spring-cloud-starter-bootstrap 依赖引入到工程中：-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
     </dependencies>
 
  <!--   <repositories>
