--- a/wikl-component/pom.xml
+++ b/wikl-component/pom.xml
@@ -178,6 +178,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <!--alibaba sentinel-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
