--- a/wikl-component/src/main/resources/bootstrap.yml
+++ b/wikl-component/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 spring:
-  profiles:
-    active: dev
+#  profiles:
+#    active: dev
+  config:
+    activate:
+      on-profile: dev
   cloud:
     config:
       # 解决添加配置中心依赖，但是没有配置中心，或者连不通时，控制台报错问题； true 启用配置中心，false 不启用
