--- a/wikl-scala/pom.xml
+++ b/wikl-scala/pom.xml
@@ -13,6 +13,14 @@
     <artifactId>wikl-scala</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
